--- a/LAMBDA/python-s3-thumbnail/serverless.yml
+++ b/LAMBDA/python-s3-thumbnail/serverless.yml
@@ -4,7 +4,7 @@ service: python-s3-thumbnail
 provider:
   name: aws
   runtime: python2.7
-  region: us-east-1
+  region: eu-central-1
   profile: serverless-admin
   timeout: 10
   memorySize: 128
